tests/errors/undecl-at-id.au
struct A{}

func (self: A) a() {
    @a;
}